# kone-assignment-demo

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-image-build-pipeline.yml  docker-image.yml  helloworld-app-build-pipeline.yml  helloworld-app-pipeline.yml
src/: Helloworld.cpp  Helloworld.h  main.cpp
tst/: Helloworld-test.cpp
